# inspire_hand_ws

./: .gitignore  CYLINDER_PROJECTION_IMPLEMENTATION.md  CYLINDER_UNWRAP_USAGE.md  UNWRAP_IMAGE_SIZE_EXPLAINED.md  readme.md  results.csv  test_batch.sh  test_prediction.sh
src/inspire_hand_description/: CMakeLists.txt  README.md  package.xml
src/inspire_hand_description/config/: joint_extraction_right.json  mesh_analysis_left.json  mesh_analysis_right.json  mesh_mapping_left.yaml  mesh_mapping_right.yaml
src/inspire_hand_description/launch/: display.launch.py  display_tactile.launch.py
src/inspire_hand_description/meshes/left/: base_link.STL  left_index_1.STL  left_index_2.STL  left_index_force_sensor_1.STL  left_index_force_sensor_2.STL  left_index_force_sensor_3.STL  left_little_1.STL  (+68 more)
src/inspire_hand_description/rviz/: cylinder_projection.rviz  display.rviz  left.rviz  right.rviz  tactile_pointcloud.rviz
src/inspire_hand_description/scripts/: build_urdf_from_meshes.py  extract_all_meshes.py  extract_joints_from_meshes.py  generate_urdf_from_parts.py  generate_urdf_from_reference.py  merge_link_meshes.py  mesh_analyzer.py  step_assembly_parser.py  step_mesh_extractor.py  step_to_urdf_pipeline.py  urdf_generator.py
src/inspire_hand_description/urdf/: inspire_hand_left.urdf  inspire_hand_right.urdf  inspire_hand_right_parts.urdf  inspire_hand_right_ref.urdf  rh56e2_left.urdf  rh56e2_right.urdf
src/inspire_hand_ros2/: CMakeLists.txt  README.md  package.xml  setup_tactile_viz.sh
src/inspire_hand_ros2/action/: GraspObject.action
src/inspire_hand_ros2/config/: cylinder_projection.yaml  grasp_presets.yaml  hand_params.yaml  tactile_pointcloud.yaml
src/inspire_hand_ros2/inspire_hand_ros2/: __init__.py  bag_data_sampler.py  cylinder_projection_node.py  cylinder_unwrap_node.py  grasp_controller.py  inspire_hand_driver.py  inspire_hand_node.py  kinematics_solver.py  mesh_sampler.py  tactile_mapper.py  tactile_pointcloud_node.py  tactile_processor.py  visualizer.py  viz_data.py  viz_qt.py
src/inspire_hand_ros2/launch/: cylinder_projection.launch.py  cylinder_unwrap.launch.py  inspire_hand.launch.py  tactile_pointcloud.launch.py  tactile_visualization.launch.py
src/inspire_hand_ros2/msg/: FingerTactile.msg  GraspStatus.msg  InspireHandControl.msg  InspireHandState.msg  InspireHandTouch.msg
src/inspire_hand_ros2/scripts/: publish_test_tactile.py
src/inspire_hand_ros2/srv/: Calibrate.srv  GetHandState.srv  Grasp.srv  Release.srv  SetFingerPosition.srv
(+253 files in other folders)
